# t9-predictioner

./: CMakeLists.txt  README.md  dictionary_source.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rmfMaxxx.pro  sonar-project.properties
.github/workflows/: codeql.yml
src/: Converter.cpp  Converter.h  DataLoader.cpp  DataLoader.h  Loader.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mapping.cpp  Mapping.h  main.cpp  mainwindow.cpp
tests/: CMakeLists.txt  ConvertTest.cpp  ConvertTest.h  DataLoaderTest.cpp  DataLoaderTest.h  MainWindowTest.cpp  MainWindowTest.h  MappingTest.cpp  MappingTest.h  Tests.cpp  testResources.qrc
tests/res/: testDictionaryEN.dic
